sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:82: error: type mismatch;
 found   : Unit
 required: Int
  if (col1 == col){
  ^